# bsi-agent

./: .env.example  .gitignore  1  IMPLEMENTATION_PLAN.md  PLAN_STEP1_VALIDATE_MODEL_C.md  README.md  README_STEP1.md  README_STEP2.md  app.py  finetuned.txt  pyproject.toml  requirements.txt  temp.jsonl  zeroshot.txt
configs/: config.yaml
data/synthetic_dialogues/: dialogues.jsonl  dialogues_demo.jsonl  dialogues_deom_old.jsonl
demo_data/: README.md
demo_data/processed/: all_cases.jsonl  fixed_results.jsonl  gpt4o_results.jsonl  test_cases_fixed.jsonl  train_cases.jsonl
demo_data/synthetic_dialogues/: dialogues_old.jsonl  dialogues_old1.jsonl  dialogues_old2.jsonl  dialogues_old3.jsonl  example copy.jsonl  stam.jsonl
scripts/: check_columns.py  demo_one_case.py  evaluate.py  evaluate_classifier.py  evaluate_question_generation.py  evaluate_with_local_llm_support.py  extract_bsi_cases.py  extract_results.py  generate_dialogues.py  generate_summaries.py  generate_training_data copy.py  generate_training_data.py  preprocess_mimic.py  run_interactive.py  test_classifier.py  train.py
src/bsi_agent/: __init__.py
src/bsi_agent/agent/: __init__.py  bsi_agent.py  local_llm.py  prompts.py
src/bsi_agent/data/: __init__.py  bsi_cohort.py  mimic_loader.py  redaction.py  utils.py
src/bsi_agent/environment/: __init__.py  ehr_environment.py  human_environment.py  text_renderer.py
src/bsi_agent/evaluation/: __init__.py  metrics.py  pathogen_matching.py  similarity_metrics.py
src/bsi_agent/generation/: __init__.py  answer_generator.py  (+5 more)
tests/: __init__.py
(+2 files in other folders)
